Fix(db): why was this not using the collector